Bug 99953 - device9.c:122:49: error: ‘PIPE_CAP_USER_INDEX_BUFFERS’ undeclared (first use in this function)
Summary: device9.c:122:49: error: ‘PIPE_CAP_USER_INDEX_BUFFERS’ undeclared (first use ...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2017-02-25 00:03 UTC by Vinson Lee
Modified: 2017-02-25 13:14 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2017-02-25 00:03:37 UTC
mesa: c7878b0167bb7e652973c208e172b93c00956a1c (master 17.1.0-devel)

  CC       device9.lo
device9.c: In function ‘NineDevice9_ctor’:
device9.c:122:49: error: ‘PIPE_CAP_USER_INDEX_BUFFERS’ undeclared (first use in this function)
 #define GET_PCAP(n) pScreen->get_param(pScreen, PIPE_CAP_##n)
                                                 ^
device9.c:476:36: note: in expansion of macro ‘GET_PCAP’
     This->driver_caps.user_ibufs = GET_PCAP(USER_INDEX_BUFFERS) && !This->csmt_active;
                                    ^~~~~~~~
device9.c:122:49: note: each undeclared identifier is reported only once for each function it appears in
 #define GET_PCAP(n) pScreen->get_param(pScreen, PIPE_CAP_##n)
                                                 ^
device9.c:476:36: note: in expansion of macro ‘GET_PCAP’
     This->driver_caps.user_ibufs = GET_PCAP(USER_INDEX_BUFFERS) && !This->csmt_active;
                                    ^~~~~~~~

commit 4a883966c1f74f43afc145d2c3d27af7b8c5e01a
Author: Marek Olšák <marek.olsak@amd.com>
Date:   Fri Feb 17 02:28:20 2017 +0100

    gallium: remove PIPE_CAP_USER_INDEX_BUFFERS
    
    all drivers support it
    
    Reviewed-by: Nicolai Hähnle <nicolai.haehnle@amd.com>
    Reviewed-by: Brian Paul <brianp@vmware.com>
    Tested-by: Brian Paul <brianp@vmware.com>  (VMware driver only)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.